5.0.0 -> 5.1a1:
    - jbj: pedantic identification of Foo (not foo) syscalls in --fsmdebug spew.
    - jbj: fix: --rollback PSM_INIT changes added fstates before initialize.
    - rse: ensure macro option parsing is done correctly also under GLIBC by not allowing option/argument permutations
    - jbj: retrieve old originTime earlier to include identical package replace.
    - jbj: fix: functional "-N-V-R.A" erasures-within-upgrade transactions.
    - jbj: fix: retrieve originTime from old, not new, header.
    - jbj: permit "-N-V-R.A" erasure args within install/upgrade transactions.
    - jbj: propagate the time a package was first installed through upgrades (available via tag "ORIGINTIME").
    - jbj: replace sr.po from translation project.
    - jbj: fix: rpmtsCheck() needs to return 1 when problems exist.
    - rse: (again) replace u_int32_t with uint32_t to be consistent across the code base
    - jbj: use RPM_OS_NTOQNX as manifest constant.
    - jbj: updated nl.po (Translation Project).
    - rpm.org: Missing space in russian translation (mdvbz#36974).
    - rpm.org: Quote find-debuginfo builddir to avoid whitespace issues.
    - jbj: generailize to verify(*) => -Va and verify(/path) => -Vf /path.
    - jbj: fix: no output performing verify(...) probe.
    - jbj: fix: insure valid exit code for verify(...) probe.
    - jbj: add verify(N) = E:V-R runtime dependency probe. more to do ...
    - jbj: stub in RPMTAG_FILESTAT and RPMTAG_STAT extensions, w-i-p.
    - jbj: re-add PayloadFilesHavePrefix/CompressedFileNames w --lsb.
    - rse: provide %{shrink:<body>} macro for removing leading+trailing and removing intermediate whitespaces
    - rse: allow sub-shell and Lua independent speedy lookup of environment variables via %{getenv:<name>} in macros
    - jbj: QNX needs defines for fts.c.
    - rse: upgrade from Lua 5.1.2 to Lua 5.1.3 (external and internal)
    - jbj: include <pthread.h> everywhere.