@@ -419,6 +419,13 @@ assert(p != NULL);
 	    continue;
 
 	/* Snarf the original install time from older package(s). */
+	he->tag = RPMTAG_ORIGINTID;
+	xx = headerGet(oh, he, 0);
+	if (xx && he->p.ui32p != NULL) {
+	    if (p->originTid == 0 || p->originTid > he->p.ui32p[0])
+		p->originTid = he->p.ui32p[0];
+	    he->p.ptr = _free(he->p.ptr);
+	}
 	he->tag = RPMTAG_ORIGINTIME;
 	xx = headerGet(oh, he, 0);
 	if (xx && he->p.ui32p != NULL) {
